minor changes and notebook to retrieve preds

--- a/Post model in the database.ipynb
+++ b/Post model in the database.ipynb
@@ -5,7 +5,7 @@
    "id": "4a1d63f6-71d8-47e9-8145-50567cea4cd7",
    "metadata": {},
    "source": [
-    "This notebook is an example of how your model can be registered in the platform. **The first step is create your 'X-UID-Key' that will be used to link the model with your account. See in [docs](https://api.mosqlimate.org/docs/registry/POST/uid-key/) how create it.**"
+    "This notebook exemplifies how your model can be registered in the platform. **The first step is to create your 'X-UID-Key' that will be used to link the model with your account. See in [docs](https://api.mosqlimate.org/docs/registry/POST/uid-key/) how create it.**"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "id": "09b15aca-17e0-4ddf-ba28-669606533d5c",
    "metadata": {},
    "source": [
-    "The function below can be used to register your model, just remember to update your `\"X-UID-Key\"`. Below there is a table explaining the meaning of each parameter: \n",
+    "The function below can be used to register your model, remember to update your `\"X-UID-Key\"`. Below there is a table explaining the meaning of each parameter: \n",
     "\n",
     "![Captura de Tela 2023-12-06 às 05.55.16.png](attachment:9c01db6d-2bc2-45e8-9f97-0ab485d299d1.png)"
    ]
@@ -70,7 +70,7 @@
    "id": "e91f90cd",
    "metadata": {},
    "source": [
-    "Since we create a **dengue (disease) ** univariate model in **Python (implementation_language)** that **forecast (type)**  cases four **weeks (time_resolution)** ahead by **city (adm_level)** let's fill this parameters as below. **Don't forget to add the url link to your github repository**. "
+    "Since we create a **dengue (disease)** univariate model in **Python (implementation_language)** that **forecast (type)**  cases four **weeks (time_resolution)** ahead by **city (adm_level)**, let's fill these parameters as below. **Don't forget to add the URL link to your GitHub repository**.\n"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "id": "84012893-6a73-4a53-96bf-3ddfe6fe08ae",
    "metadata": {},
    "source": [
-    "After fill the parameters run the function below: "
+    "After filling the parameters, run the function below: "
    ]
   },
   {
@@ -167,10 +167,9 @@
    "id": "8b7434a1-e48a-49dc-a413-856df39bbc31",
    "metadata": {},
    "source": [
-    "The `id` of your model will be used when saving predictions. The registry of your model just need to be done one time by model. \n",
+    "The `id` of your model will be used when saving predictions. Your model's registry needs to be done **one time by model.** \n",
     "\n",
-    "After registering your model it will appear as shown below in your account on the platform: \n",
-    "\n",
+    "After registering your model, it will appear as shown below in your account on the platform: \n",
     "\n",
     "![Captura de Tela 2023-12-06 às 06.12.05.png](attachment:81f77058-4d9a-4b60-a66a-dd545646087f.png)"
    ]
@@ -200,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
