--- a/get_data_from_mosqlimate.ipynb.ipynb
+++ b/get_data_from_mosqlimate.ipynb.ipynb
@@ -5,7 +5,7 @@
    "id": "c0ad4632-5333-4dfe-8cf2-a1f345c5b4bd",
    "metadata": {},
    "source": [
-    "In this notebook it is explained how the data can be get from the Mosqlimate Data platform, all the information and functions used here are based in the [documentation](https://api.mosqlimate.org/docs/) of the project. Since our aim here is to train a simple univariate model we will just request the data from the Infodengue, but it's important to highlight that in the platform there is also climate data available fom all the cities. "
+    "This notebook explains how the data can be obtained from the Mosqlimate Data platform. All the information and functions used here are based on the [documentation](https://api.mosqlimate.org/docs/) of the project. Since we aim to train a simple univariate model, we will request the Infodengue data. Still, it's important to highlight that climate data is available from all the Brazilian cities on the platform. "
    ]
   },
   {
@@ -36,7 +36,7 @@
    "id": "12fb28d6-4924-4dd1-b67c-55c8bedc03dd",
    "metadata": {},
    "source": [
-    "The outputs of the requests in the platform are organized by pages. So, to get big time series it's necessary to request multiple pages from the API. So, to get all the data available for Rio de Janeiro we will use the functions provides in the [async requests tutorial](https://api.mosqlimate.org/docs/utils/AsyncRequests/)."
+    "The outputs of the requests in the platform are organized by pages. So, to get large time series, it's necessary to request multiple pages from the API. So, to get all the data available for Rio de Janeiro, we will use the functions provided in the [async requests tutorial](https://api.mosqlimate.org/docs/utils/AsyncRequests/)."
    ]
   },
   {
@@ -130,7 +130,7 @@
    "id": "a5235622-9235-4540-a6d2-353baa9fa0b7",
    "metadata": {},
    "source": [
-    "Now, let's define the  parameters of the request. Here we define de city (by the `geocode`), the time interval (setting `start` and `end`), and the `disease`. "
+    "Now, let's define the parameters of the request. Here, we define the city (by the `geocode`), the time interval (setting `start` and `end`), and the `disease`. "
    ]
   },
   {
@@ -450,7 +450,7 @@
    "id": "cae810e8-c767-49c2-829d-dd3e5f16dd76",
    "metadata": {},
    "source": [
-    "To train our model we just need the date and cases columns. Also, to use it with the nueral prophet API it's necessary to rename the date column to `ds` and the `casos` column to `y`. Let's make this changes and save it on a `csv` that will used in the next step to train our model. "
+    "To train our model, we need the date and cases columns. Also, to use it with the neural prophet API, it's necessary to rename the date column to `ds` and the `casos` column to `y`. Let's make these changes and save it on a `csv` that will used in the next step to train our model. "
    ]
   },
   {
@@ -490,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
