--- a/post predictions.ipynb
+++ b/post predictions.ipynb
@@ -10,7 +10,7 @@
    "id": "d993cdc2-bfba-47b2-b744-182ae63fabf7",
    "metadata": {},
    "source": [
-    "To send the predictons of your model you need to fill the parameters below: \n",
+    "To send the predictions of your model, you need to fill in the parameters below:\n",
     "\n",
     "![Captura de Tela 2023-12-06 às 06.21.18.png](attachment:f163a0c2-c1ff-477b-ab56-62d8e6056089.png)"
    ]
@@ -87,7 +87,7 @@
    "id": "879ad382-d630-4cc6-aa3e-5e3a3794f5a9",
    "metadata": {},
    "source": [
-    "The importance of have the parameters `commit` and `predict_date` is date with them, later in the platform you we can compare the performance of predictions associated with different versions of your code. "
+    "The importance of having the parameters `commit` and `predict_date` is to have a temporal idea of when the prediction was made, later in the platform, we can compare the performance of predictions associated with different versions of your code. "
    ]
   },
   {
@@ -95,7 +95,7 @@
    "id": "bffdd8d6-4499-4a37-901f-f5e499f52121",
    "metadata": {},
    "source": [
-    "In the cell below we will load our predictions and transform it in json using: `df.to_json(orient = 'records', date_format = 'iso')`. **Don't forget to update your model_id**."
+    "In the cell below, we will load our predictions and transform them in JSON using: `df.to_json(orient = 'records', date_format = 'iso')`. **Don't forget to update your model_id**."
    ]
   },
   {
@@ -160,8 +160,7 @@
    "id": "cade6f7e-4fcc-4e6a-ae79-c4ab7aa2efa2",
    "metadata": {},
    "source": [
-    "After that your prediction will show in your account as below and you can see the visualization by clicking on the icon highlighted:\n",
-    "\n",
+    "After that, your prediction will show in your account as below, and you can see the visualization by clicking on the icon highlighted:\n",
     "\n",
     "![Captura de Tela 2023-12-06 às 06.36.22.png](attachment:e2df277f-a556-4834-b532-fec632a7e497.png)\n",
     "\n",
@@ -197,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
