--- a/train_and_gen_predictions.ipynb
+++ b/train_and_gen_predictions.ipynb
@@ -5,7 +5,7 @@
    "id": "baeae54d-bb48-4eaf-822e-9ade27c52b43",
    "metadata": {},
    "source": [
-    "In this notebook, we will run the model and generate the predictions that it will be sent to the platform. "
+    "In this notebook, we will run the model and generate the predictions that will be sent to the platform. "
    ]
   },
   {
@@ -34,7 +34,7 @@
    "id": "d7de3db0-0ec5-4b10-bc73-99e80e07d4e7",
    "metadata": {},
    "source": [
-    "The function below will be used to get the data saved in the previous step, apply a log transformation (to improve the training process), and split the data into training and test. We will train and eval the model using the data up to `2022-01-01`."
+    "The function below will be used to get the data saved in the previous step, apply a log transformation (to improve the training process), and split the data into training and testing. We will train and evaluate the model using the data up to `2022-01-01`."
    ]
   },
   {
@@ -62,7 +62,7 @@
    "id": "02a78ae0-df39-4c89-8db8-665eadc4a666",
    "metadata": {},
    "source": [
-    "The cell below will create the model, split the training data in train and val and fit the model. The model below uses the last 16 (`n_lags`) observations to predict the next four (`n_forecasts`). "
+    "The cell below will create the model, split the training data in train and val, and fit the model. The model below uses the last 16 (`n_lags`) observations to predict the following four (`n_forecasts`)."
    ]
   },
   {
@@ -129,18 +129,18 @@
    "id": "600d72ab-1f35-459d-92ec-d447ef2fea7f",
    "metadata": {},
    "source": [
-    "To see the ouput of the model let's create a function that select the forecast of the 4 step ahead and apply a exp transform on the data. In this function we will already transform the data in the format accept by the API for the forecast models. For this class the prediction element send to the platform must have at least the following columns: \n",
+    "To see the model's output, let's create a function that selects the forecast of the 4 steps ahead and applies an exp transform on the data. In this function, we will transform the data in the format the API accepts for the forecast models. For this class, the prediction element sent to the platform must have at least the following columns: \n",
     "\n",
     "* `dates`: with the date of the values forecasted;\n",
     "* `preds`: with the predictions;\n",
     "* `lower`: with the lower value of the CI (Nan if the model didn't provide a CI);\n",
     "* `upper`: with the upper value of the CI (Nan if the model didn't provide a CI);\n",
-    "* `adm_2`: in the Brazil case the IBGE code (7 - digit) of the city forecasted;\n",
-    "* `adm_1`: in the Brazil case the UF code (two-letter) of the state forecasted;\n",
+    "* `adm_2`: in the Brazil case, the IBGE code (7 - 7-digit) of the city forecasted;\n",
+    "* `adm_1`: in the Brazil case, the UF code (two-letter) of the state forecasted;\n",
     "* `adm_0`: ISO code of the country forecasted (BR for Brazil);\n",
     "\n",
     "\n",
-    "In the function below we will keep the column `y` to easiest compare the predictions with what happened, but it will be remove before send to the database."
+    "In the function below, we will keep the column `y` to easiest compare the predictions with what happened, but it will be removed before sending it to the database."
    ]
   },
   {
@@ -753,7 +753,7 @@
    "id": "b778ecac-f5a1-439a-9aae-2629bf5494b5",
    "metadata": {},
    "source": [
-    "Let's save this data on a dataframe that it will be used to send the predictions to the mosqlimate platform. "
+    "Let's save this data on a dataframe that will be used to send the predictions to the mosqlimate platform. "
    ]
   },
   {
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1075c6b-98ca-4b29-a351-51a3fc7ebf35",
+   "id": "f9195d77",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -792,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
