--- a/post predictions.ipynb
+++ b/post predictions.ipynb
@@ -165,8 +165,7 @@
     "![Captura de Tela 2023-12-06 às 06.36.22.png](attachment:e2df277f-a556-4834-b532-fec632a7e497.png)\n",
     "\n",
     "\n",
-    "\n",
-    "And see the output below: \n",
+    "After that, the predictions will be shown by gray lines in the left panel. Hovering with the mouse over one will highlight them in the left panel and display the prediction interval on the right panel:\n",
     "\n",
     "![Captura de Tela 2023-12-06 às 19.27.48.png](attachment:fabe3076-6348-4993-aa7d-b6463ba8894e.png)"
    ]
