solve bug that duplicate output data

--- a/get_data_from_mosqlimate.ipynb.ipynb
+++ b/get_data_from_mosqlimate.ipynb.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "03abfc62-4e97-4c58-a14e-f715125ffb6f",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "390e5d61-ffb1-4593-b202-866ca4b079ca",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "fbf22f09-fbe7-4bdd-a086-2840f4c90979",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "6c23f8ad-e22f-478d-affa-3459378820f9",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "51ded9c7-2dcf-42ef-ad39-2ae24ae90908",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
     "        url = compose_url(base_url, parameters)\n",
     "        data = await attempt_delay(session, url)\n",
     "        total_pages = data[\"pagination\"][\"total_pages\"]\n",
-    "        result.extend(data[\"items\"])\n",
+    "        #result.extend(data[\"items\"])\n",
     "\n",
     "        for page in range(1, total_pages + 1):\n",
     "            url = compose_url(base_url, parameters, page)\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "f96605a2-13fe-4827-9193-6cc56b3d2bec",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "445bd4f9-86fa-4b7e-bef9-892718ce382c",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 3.825173 seconds\n"
+      "Took 2.486216 seconds\n"
      ]
     },
     {
@@ -182,15 +182,15 @@
        " 'casos_est_max': 996,\n",
        " 'casos': 996,\n",
        " 'municipio_geocodigo': 3304557,\n",
-       " 'p_rt1': 3.749455e-09,\n",
-       " 'p_inc100k': 14.760333,\n",
+       " 'p_rt1': 4.794721e-09,\n",
+       " 'p_inc100k': 15.032036,\n",
        " 'Localidade_id': 0,\n",
        " 'nivel': 4,\n",
-       " 'id': 330455720232619684,\n",
-       " 'versao_modelo': '2023-11-23',\n",
-       " 'Rt': 0.7837772,\n",
+       " 'id': 330455720232619821,\n",
+       " 'versao_modelo': '2024-04-08',\n",
+       " 'Rt': 0.78507173,\n",
        " 'municipio_nome': 'Rio de Janeiro',\n",
-       " 'pop': 6747815.0,\n",
+       " 'pop': 6625849.0,\n",
        " 'tempmin': 19.7142857142857,\n",
        " 'umidmax': 84.4387274285714,\n",
        " 'receptivo': 0,\n",
@@ -207,7 +207,7 @@
        " 'casconf': None}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "299d0c7e-586d-446f-a995-df4f9d578936",
    "metadata": {},
    "outputs": [
@@ -286,8 +286,8 @@
        "      <td>996.0</td>\n",
        "      <td>996</td>\n",
        "      <td>3304557</td>\n",
-       "      <td>3.749455e-09</td>\n",
-       "      <td>14.760333</td>\n",
+       "      <td>4.794721e-09</td>\n",
+       "      <td>15.032036</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
@@ -305,13 +305,13 @@
        "      <th>1</th>\n",
        "      <td>2023-06-18</td>\n",
        "      <td>202325</td>\n",
-       "      <td>1234.0</td>\n",
-       "      <td>1234</td>\n",
-       "      <td>1234.0</td>\n",
-       "      <td>1234</td>\n",
+       "      <td>1236.0</td>\n",
+       "      <td>1236</td>\n",
+       "      <td>1236.0</td>\n",
+       "      <td>1236</td>\n",
        "      <td>3304557</td>\n",
-       "      <td>9.390902e-02</td>\n",
-       "      <td>18.287401</td>\n",
+       "      <td>1.168667e-01</td>\n",
+       "      <td>18.654213</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
@@ -329,13 +329,13 @@
        "      <th>2</th>\n",
        "      <td>2023-06-11</td>\n",
        "      <td>202324</td>\n",
-       "      <td>1351.0</td>\n",
-       "      <td>1351</td>\n",
-       "      <td>1351.0</td>\n",
-       "      <td>1351</td>\n",
+       "      <td>1348.0</td>\n",
+       "      <td>1348</td>\n",
+       "      <td>1348.0</td>\n",
+       "      <td>1348</td>\n",
        "      <td>3304557</td>\n",
-       "      <td>3.714996e-01</td>\n",
-       "      <td>20.021296</td>\n",
+       "      <td>3.959253e-01</td>\n",
+       "      <td>20.344563</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
@@ -353,13 +353,13 @@
        "      <th>3</th>\n",
        "      <td>2023-06-04</td>\n",
        "      <td>202323</td>\n",
-       "      <td>1242.0</td>\n",
-       "      <td>1242</td>\n",
-       "      <td>1242.0</td>\n",
-       "      <td>1242</td>\n",
+       "      <td>1238.0</td>\n",
+       "      <td>1238</td>\n",
+       "      <td>1238.0</td>\n",
+       "      <td>1238</td>\n",
        "      <td>3304557</td>\n",
-       "      <td>1.519026e-07</td>\n",
-       "      <td>18.405958</td>\n",
+       "      <td>1.960880e-07</td>\n",
+       "      <td>18.684399</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
@@ -377,13 +377,13 @@
        "      <th>4</th>\n",
        "      <td>2023-05-28</td>\n",
        "      <td>202322</td>\n",
-       "      <td>1335.0</td>\n",
-       "      <td>1335</td>\n",
-       "      <td>1335.0</td>\n",
-       "      <td>1335</td>\n",
+       "      <td>1328.0</td>\n",
+       "      <td>1328</td>\n",
+       "      <td>1328.0</td>\n",
+       "      <td>1328</td>\n",
        "      <td>3304557</td>\n",
-       "      <td>3.511171e-10</td>\n",
-       "      <td>19.784182</td>\n",
+       "      <td>2.438660e-10</td>\n",
+       "      <td>20.042715</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>2</td>\n",
@@ -405,17 +405,17 @@
       "text/plain": [
        "   data_iniSE      SE  casos_est  casos_est_min  casos_est_max  casos  \\\n",
        "0  2023-06-25  202326      996.0            996          996.0    996   \n",
-       "1  2023-06-18  202325     1234.0           1234         1234.0   1234   \n",
-       "2  2023-06-11  202324     1351.0           1351         1351.0   1351   \n",
-       "3  2023-06-04  202323     1242.0           1242         1242.0   1242   \n",
-       "4  2023-05-28  202322     1335.0           1335         1335.0   1335   \n",
+       "1  2023-06-18  202325     1236.0           1236         1236.0   1236   \n",
+       "2  2023-06-11  202324     1348.0           1348         1348.0   1348   \n",
+       "3  2023-06-04  202323     1238.0           1238         1238.0   1238   \n",
+       "4  2023-05-28  202322     1328.0           1328         1328.0   1328   \n",
        "\n",
        "   municipio_geocodigo         p_rt1  p_inc100k  Localidade_id  ...  \\\n",
-       "0              3304557  3.749455e-09  14.760333              0  ...   \n",
-       "1              3304557  9.390902e-02  18.287401              0  ...   \n",
-       "2              3304557  3.714996e-01  20.021296              0  ...   \n",
-       "3              3304557  1.519026e-07  18.405958              0  ...   \n",
-       "4              3304557  3.511171e-10  19.784182              0  ...   \n",
+       "0              3304557  4.794721e-09  15.032036              0  ...   \n",
+       "1              3304557  1.168667e-01  18.654213              0  ...   \n",
+       "2              3304557  3.959253e-01  20.344563              0  ...   \n",
+       "3              3304557  1.960880e-07  18.684399              0  ...   \n",
+       "4              3304557  2.438660e-10  20.042715              0  ...   \n",
        "\n",
        "   nivel_inc    umidmed    umidmin    tempmed    tempmax  casprov  \\\n",
        "0          2  81.390786  78.598404  20.214286  20.714286     None   \n",
@@ -434,7 +434,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "8b4603c2-881e-40e1-896e-88d817313614",
    "metadata": {},
    "outputs": [],
